v1.10/learn/readme.md
## Welcome to Obol!

Obol builds Distributed Validator Technology (DVT), which empowers node operators, staking protocols, and institutions run Ethereum validators that are more secure, fault-tolerant, and performant. DVT benefits both operators and capital allocators while strengthening the network itself by reducing centralization risk and protecting against supermajority failures. Obol DVs are the staking endgame.

Whether you’re here to learn about DVT, integrate it into your staking stack, or want to stake your ETH on DVs, these docs will help you get started.

---

## Quick start

<div class="gb-cards">
<a class="gb-card" href="https://obol.org"><img class="gb-card-img" src="../img/gitbook/cards/stake.png" alt="" loading="lazy" /><h3>Stake ETH on Obol DVs</h3><p>Stake on existing DVT products and explore available options.</p></a>
<a class="gb-card" href="readme/learn-about-obol"><img class="gb-card-img" src="../img/gitbook/cards/open_book.png" alt="" loading="lazy" /><h3>Learn About Obol</h3><p>Start here to understand DVT, how Charon (our middleware) works, and why distributed validators are fundamental to Ethereums future.</p></a>
</div>

<div class="gb-cards">
<a class="gb-card" href="../run-a-dv/start/quickstart_overview"><img class="gb-card-img" src="../img/gitbook/cards/integrate.png" alt="" loading="lazy" /><h3>Integrate Obol DVs</h3><p>Deploy DVs on mainnet or testnet and follow the quickstart path for operators and allocators.</p></a>
<a class="gb-card" href="mailto:business@obol.tech"><img class="gb-card-img" src="../img/gitbook/cards/contact_us.png" alt="" loading="lazy" /><h3>Get In Touch</h3><p>Partnerships, integration support, allocator onboarding, or general questions.</p></a>
</div>

> **Browsing as an AI agent?** Start with [obol.org/llms.txt](https://obol.org/llms.txt) for a terse index of the ecosystem, or [obol.org/llms-full.txt](https://obol.org/llms-full.txt) for a self-contained briefing. The [`ObolNetwork/skills`](https://github.com/ObolNetwork/skills) repo publishes Claude Code skills for running DVs and the Obol Stack.
